--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "semantic-ui-react": "^0.84.0",
     "sequelize": "^4.38.0",
     "socket.io": "^2.1.1",
-    "vm2": "^3.6.6"
+    "vm2": "^3.6.6",
+    "yarn": "^1.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.55",
