--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "eslint-config-fullstack": "^5.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-react": "^7.10.0",
+    "file-loader": "^3.0.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "mocha": "^5.2.0",
@@ -99,6 +100,7 @@
     "redux-devtools-extension": "^2.13.5",
     "redux-mock-store": "^1.5.3",
     "supertest": "^3.1.0",
+    "url-loader": "^1.1.2",
     "webpack": "^4.16.4",
     "webpack-cli": "^3.1.0"
   }
