--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "connect-session-sequelize": "^4.1.0",
     "express": "^4.16.3",
     "express-session": "^1.15.1",
+    "express-socket.io-session": "^1.3.5",
     "history": "^4.6.3",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
